# aurora

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESKTOP.md  LICENSE  LICENSE-BINARIES  LICENSE-FAQ.md  LICENSE-NONCOMMERCIAL.md  README.md  RELEASES.md  config.yaml  package-lock.json  package.json  popular-models.yaml  requirements.txt  run.py
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
app/: cli.py  config.py  inference.py  llama_server.py  logging_utils.py  main.py  model_registry.py  prompt_store.py
releases/0.1.0/: aurora-macos-aarch64
scripts/: install-cli-user.ps1  install-cli.ps1  install-cli.sh  prepare-sidecar.ps1  prepare-sidecar.sh  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  api.ts  i18n.tsx  main.tsx  style.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: cli.rs  main.rs  session.rs
ui/src/components/: AboutModal.tsx  ChatMessage.tsx  FileUpload.tsx  ThemeToggle.tsx  UninstallModal.tsx  XTerminal.tsx
ui/src/components/icons/: AuroraIcon.tsx  CheckIcon.tsx  ChevronIcon.tsx  CopyIcon.tsx  HelpIcon.tsx  HistoryIcon.tsx  HomeIcon.tsx  LogsIcon.tsx  ModelsIcon.tsx  PlusIcon.tsx  PullIcon.tsx  SendIcon.tsx  SettingsIcon.tsx  SparkleIcon.tsx  TerminalIcon.tsx
ui/src/utils/: prompt.test.ts  prompt.ts
